# verifiable-trust-infrastructure

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  affinidi-ai-agents-deck.html  deny.toml
cnm-cli/: Cargo.toml  README.md
cnm-cli/src/: audit.rs  auth.rs  main.rs  setup.rs
deploy/nitro/enclave-proxy/: Cargo.toml
didcomm-test/: Cargo.toml
didcomm-test/src/: main.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_nitro_quote.rs  fuzz_nitro_verify.rs
fuzz/seeds/: README.md
fuzz/seeds/bootstrap-request/: template-bootstrap.json
fuzz/seeds/nitro-quote/: synthetic.cose
fuzz/seeds/oid4vci-proof/: holder-proof.jwt
fuzz/seeds/sd-jwt-presentation/: membership.sdjwt
fuzz/seeds/sealed-transfer-armor/: admin-key-set.vta
fuzz/seeds/vp-token/: dcql-map.json  single-presentation.json
pnm-cli/: Cargo.toml  README.md
pnm-cli/src/: auth.rs  bootstrap.rs  cli.rs  config.rs  main.rs  setup.rs
pnm-cli/src/commands/: acl.rs  bootstrap.rs  contexts.rs  device.rs  health.rs  mod.rs  setup.rs  step_up.rs  vault.rs  webvh.rs
tests/e2e/: Cargo.toml
tests/e2e/tests/: client_didcomm.rs  didcomm_session.rs
vta-cli-common/: Cargo.toml
vta-cli-common/src/: duration.rs  render.rs  sealed_consumer.rs  sealed_producer.rs
vta-cli-common/src/commands/: acl.rs  audit.rs  contexts.rs  credentials.rs  device.rs  did_templates.rs  keys.rs  mediator.rs  mod.rs  services.rs  step_up.rs  vault.rs  webvh.rs  webvh_edit.rs
vta-enclave/: Cargo.toml
vta-enclave/src/: main.rs  vsock_log.rs
vta-mcp/: Cargo.toml  README.md
vta-mcp/src/: main.rs  server.rs
vta-mobile-core/: Cargo.toml
vta-mobile-core/scripts/: package-ios.sh
vta-mobile-core/src/: api.rs  consent.rs  didcomm.rs  error.rs  keys.rs  lib.rs  mediator.rs  push.rs  resolver.rs  session.rs  stepup.rs  tsp.rs
vta-sdk/: Cargo.toml
vta-sdk/contexts/: bootstrap-v1.jsonld  vta-authorization-v1.jsonld
vta-sdk/examples/: gen_fuzz_seeds.rs  sealed_transfer_round_trip.rs
vta-sdk/src/: acl_setup.rs  client.rs  contexts.rs  credentials.rs  did_key.rs  didcomm_session.rs  error.rs  lib.rs  prelude.rs  session.rs  trust_tasks.rs  vp.rs
vta-sdk/src/attestation/: mod.rs  parse.rs  test_quote.rs  verify.rs
vta-sdk/src/client/: acl.rs  agent_devices.rs  audit.rs  backup.rs  bootstrap.rs  consent.rs  contexts.rs  credentials.rs  did_templates.rs  keys.rs  mod.rs  secrets.rs  types.rs  vault.rs  vta_management.rs  webvh.rs
vta-sdk/src/did_templates/: builtin.rs  mod.rs  render.rs  tests.rs
vta-sdk/src/integration/: auth.rs  mod.rs
vta-sdk/src/protocol/: matching.rs  mod.rs  services.rs
vta-sdk/src/protocols/: auth.rs  credentials_issuance.rs  discovery.rs  join_requests.rs  members.rs  mod.rs  protocol_management.rs  provision_integration_management.rs
vta-sdk/src/provision_client/: ask.rs  diagnostics.rs  driver.rs  error.rs  event.rs  intent.rs  messages.rs  mod.rs  resolve.rs  result.rs  runner.rs  runner_didcomm.rs  runner_rest.rs  setup_key.rs  test_helpers.rs
vta-sdk/src/provision_integration/: credential.rs  didcomm.rs  http.rs  mod.rs  payload.rs  request.rs
vta-sdk/src/sealed_transfer/: bundle.rs  mod.rs  template_bootstrap.rs  verify.rs
vta-sdk/templates/: ai-agent.json  did-host-didcomm.json  did-host-http-didcomm.json  did-host-http.json  did-hosting-control.json  did-hosting-daemon.json  did-hosting-server.json  didcomm-mediator.json  vtc-host.json  webvh-hosting-server.json
vta-sdk/tests/: auth_light_rest.rs  client_rest.rs  cred_formats_build.rs  protocol_debug_redaction.rs  protocol_rest.rs  provision_client_e2e.rs  sd_jwt_vc_smoke.rs  session_store.rs
vta-sdk/tests/fixtures/: did-hosting-server.rendered.json
vta-service/: CLAUDE.md  Cargo.toml  request.json
vta-service/policies/: default.rego
vta-service/src/: acl_cli.rs  acl_sweeper.rs  backup_bundle_store.rs  backup_bundle_sweeper.rs  bootstrap_cli.rs  config.rs  consent_sweeper.rs  deprecation.rs  did_key.rs  did_webvh.rs  didcomm_bridge.rs  hardened.rs  import_did.rs  keys_cli.rs  keyspaces.rs  lib.rs  main.rs  seal.rs  sealed_nonce_store.rs  server.rs  services_cli.rs  setup.rs  status.rs  test_support.rs  vault_cli.rs  webvh_auth.rs  webvh_cli.rs  webvh_client.rs  webvh_didcomm.rs  webvh_store.rs
vta-service/src/auth/: backend.rs
vta-service/src/contexts/: mod.rs
vta-service/src/keys/: derivation.rs  imported.rs  mod.rs  paths.rs  seeds.rs  wrapping.rs
vta-service/src/messaging/: auth.rs  drain_store.rs  drain_sweeper.rs  handlers.rs  handlers_protocol.rs  live_prover.rs  (+8 more)
vta-service/tests/: api_integration.rs  auth_flow.rs  authenticate_trust_task.rs  delegated_consent_e2e.rs  mock_vta.rs  security.rs  session_jti_pin.rs  step_up_approve_response.rs  vault_consent.rs  vault_present.rs  vault_trust_task.rs
vtc-client/: Cargo.toml
vtc-client/src/: lib.rs
vtc-service/: CLAUDE.md  Cargo.toml  build.rs
vtc-service/admin-ui/: .gitignore  README.md  index.html  install.html  install.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
vtc-service/src/: acl_cli.rs  admin_ui.rs  backup.rs  config.rs  config_store.rs  emergency.rs  lib.rs  main.rs  messaging.rs  server.rs  setup.rs  status.rs  test_support.rs
vtc-service/tests/: admin_bootstrap.rs  admin_config.rs  admin_passkeys.rs  audit_signout.rs  audit_verify.rs  auth_acl_roles.rs  auth_audience.rs  ceremony_execute.rs  community_profile.rs  config_legacy.rs  cookie_session.rs  diagnostics.rs  did_log.rs  emergency_bootstrap.rs  endorsements.rs  install_claim.rs  install_flow.rs  invitations.rs  join_didcomm.rs  join_requests.rs  members_crud.rs  passkey_state.rs  personhood.rs  policies.rs  recognise.rs  relationships.rs  removal.rs  renewal.rs  rotation.rs  routing_cors.rs  routing_modes.rs  status_lists.rs  trust_task_manifest.rs  wallet_login_siop.rs
vtc-service/website-default/: index.html  site.css  site.js
vti-common/: Cargo.toml  README.md
vti-common/src/: capability_client.rs  config.rs  consent.rs  context_path.rs  error.rs  lib.rs
vti-common/tests/: integrity_e2e.rs
vti-secrets/: Cargo.toml
(+575 files in other folders)
