
[workspace]
members = [
  "cnm-cli",
  "didcomm-test",
  "pnm-cli",
  "vta-cli-common",
  "vta-sdk",
  "vta-service",
  "vta-enclave",
  "vtc-service",
  "vti-common",
]
exclude = ["deploy/nitro/enclave-proxy"]
resolver = "3"

[workspace.package]
description = "Verifiable Trust Infrastructure (VTI) — VTA, VTC, and supporting crates"
edition = "2024"
publish = true
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.94.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/OpenVTC/verifiable-trust-infrastructure"

[workspace.dependencies]

# Affinidi Trust Development Kit
affinidi-tdk = "0.6"
# Raw crypto primitives (ed25519↔x25519 conversion, did:key helpers). Pulled
# directly so sealed-transfer can use `affinidi_crypto::did_key::*` without
# going through the higher-level Secret wrapper in secrets-resolver.
affinidi-crypto = "0.1"
# W3C VC Data Model 2.0 + Data Integrity proofs. Used by the
# provision-integration flow (VP-framed bootstrap request, VC-issued
# admin authorization). See CLAUDE.md "Authorization claims" principle.
affinidi-vc = "0.1"
affinidi-data-integrity = "0.6"
affinidi-secrets-resolver = "0.5"
affinidi-messaging-didcomm-service = "0.2"

# Decentralized Trust Graph Credentials
dtg-credentials = "0.1"

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "signal",
  "time",
] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"

# Embedded key-value store
fjall = "3"

# Serialization (JSON)
serde_json = "1"

# Key derivation (BIP32)
ed25519-dalek-bip32 = "0.3"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.10"

# DID Web with Verifiable History
didwebvh-rs = "0.4"

# URL parsing
url = "2"

# Cryptography
ed25519-dalek = "2"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
multibase = "0.9"

# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Axum extras (typed headers for Bearer auth)
axum-extra = { version = "0.12", features = ["typed-header"] }

# Base64 encoding
base64 = "0.22"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Interactive prompts
dialoguer = "0.12"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal UI
ratatui = "0.30"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }


[profile.release]
lto = "thin"
codegen-units = 1
strip = true
