
[workspace]
members = [
  "cnm-cli",
  "didcomm-test",
  "pnm-cli",
  "tests/e2e",
  "vta-cli-common",
  "vta-mcp",
  "vta-mobile-core",
  "vta-sdk",
  "vta-service",
  "vta-enclave",
  "vtc-client",
  "vtc-service",
  "vti-common",
  "vti-secrets",
  "vti-webauthn",
]
# `vta-mobile-core` is a UniFFI client crate that cross-compiles to Android/iOS.
# Keep it out of `default-members` so a bare `cargo build`/`test` for the server
# does not pull `uniffi` (or the mobile crate) into the build graph. CI that runs
# `--workspace` still builds and lints it; the mobile-artifacts job cross-compiles it.
default-members = [
  "cnm-cli",
  "didcomm-test",
  "pnm-cli",
  "tests/e2e",
  "vta-cli-common",
  "vta-mcp",
  "vta-sdk",
  "vta-service",
  "vta-enclave",
  "vtc-client",
  "vtc-service",
  "vti-common",
  "vti-secrets",
  "vti-webauthn",
]
exclude = ["deploy/nitro/enclave-proxy"]
resolver = "3"

[workspace.package]
description = "Verifiable Trust Infrastructure (VTI) — VTA, VTC, and supporting crates"
edition = "2024"
publish = true
authors = ["Glenn Gore <glenn@affinidi.com>"]
rust-version = "1.95.0"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/OpenVTC/verifiable-trust-infrastructure"

[workspace.dependencies]

# Foreign-language bindings for the mobile engine crate (`vta-mobile-core`).
uniffi = "0.28"

# Affinidi Trust Development Kit
affinidi-tdk = "0.8"
# Raw crypto primitives (ed25519↔x25519 conversion, did:key helpers). Pulled
# directly so sealed-transfer can use `affinidi_crypto::did_key::*` without
# going through the higher-level Secret wrapper in secrets-resolver.
affinidi-crypto = "0.2"
# W3C VC Data Model 2.0 + Data Integrity proofs. Used by the
# provision-integration flow (VP-framed bootstrap request, VC-issued
# admin authorization). See CLAUDE.md "Authorization claims" principle.
affinidi-vc = "0.2"
affinidi-data-integrity = "0.7"
affinidi-status-list = "0.1.3"

# Credential formats for the credential-centric VTI architecture
# (docs/05-design-notes/vti-credential-architecture.md). All published on
# crates.io and validated upstream in the TDK:
#   - affinidi-sd-jwt-vc  — SD-JWT-VC issue/verify (IETF draft-ietf-oauth-sd-jwt-vc).
#     Near-term credential path; runs on existing Ed25519/JOSE, no new curve.
#   - affinidi-bbs        — BBS+ signatures over bls12_381_plus (IETF
#     draft-irtf-cfrg-bbs-signatures). The unlinkable, selective-disclosure
#     track. Gated on an independent security audit before signing real
#     credentials (tasks §0.5).
#   - affinidi-openid4vp  — OID4VP presentation exchange (DCQL lands upstream
#     in a later task; this is the published base).
# The `bbs-2023` Data Integrity cryptosuite lives behind the
# `affinidi-data-integrity` `bbs-2023` feature, enabled per-consumer where the
# BBS proof path is wired. If you path-override these to the local TDK for an
# unreleased change (e.g. DCQL), override the whole interdependent set together
# to avoid a duplicate-version split.
affinidi-sd-jwt-vc = "0.2"
affinidi-sd-jwt = "0.1.2"
affinidi-bbs = "0.3"
affinidi-openid4vp = "0.1.2"
affinidi-openid4vci = "0.2"
affinidi-secrets-resolver = "0.5"
affinidi-messaging-didcomm-service = "0.3"
# Reliable messaging delivery layer (durable outbox + drain + §5a confirmation)
# over the MessageTransport contract — the D1 delivery layer the VTI cut-over
# (D2) wires in. `VtiOutboxStore` (vti-common) backs its OutboxStore with fjall.
affinidi-messaging-delivery = "0.1"
# Transport-agnostic messaging contract (`MessageTransport`, `Inbound`,
# `ReceivedMessage`, `MessagingError`) the delivery layer builds on. Referenced
# directly by services that demux `MessagingService::subscribe()` inbound.
affinidi-messaging-core = "0.1"

# Decentralized Trust Graph Credentials
dtg-credentials = "0.1.3"

# JSON Schema validation (issue-time credentialSchema checks)
jsonschema = "0.46"

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "signal",
  "time",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
# Surfaces unknown/typo'd keys during deserialization without rejecting them
# (config.rs unknown-key warning pass).
serde_ignored = "0.1"

# Error handling
thiserror = "2"

# Embedded key-value store
fjall = "3"

# Serialization (JSON)
serde_json = "1"

# Key derivation (BIP32)
ed25519-dalek-bip32 = "0.3"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.10"

# DID Web with Verifiable History
didwebvh-rs = "0.5.6"

# URL parsing
url = "2"

# Cryptography
ed25519-dalek = "2"
sha2 = "0.11"
# Constant-time byte equality. Used wherever we compare a
# server-stored hash against a caller-supplied value (e.g.
# backup-bundle bearer tokens). Already used by vtc-service.
subtle = "2.6"
x25519-dalek = { version = "2", features = ["static_secrets"] }
multibase = "0.9"

# JWT
# Switched off `rust_crypto` (the all-algos bundle) because it pulls in
# the `rsa` crate which is exposed to RUSTSEC-2023-0071 (Marvin Attack
# timing sidechannel). We use jsonwebtoken only for EdDSA JWTs
# (`Algorithm::EdDSA` in vti-common/auth/jwt.rs).
#
# Use the `aws_lc_rs` backend instead — it provides a single
# `CryptoProvider` for every algorithm and is already in our dep tree
# via `aws-sdk-kms`, so we don't add a new transitive. The backend is
# the AWS-vetted libcrypto fork; same primitives, no `rsa` crate.
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }

# AWS-LC backend used directly by `vti-webauthn` for ECDSA P-256 WebAuthn
# assertion verification. Already in our dep tree via `jsonwebtoken`'s
# `aws_lc_rs` feature and via `aws-sdk-kms`; hoisting here so the
# crypto-pin discipline (CLAUDE.md "Versioning & publishing") applies
# uniformly. Pin minimum patch — CVE landings should not silently
# regress.
aws-lc-rs = "1.16"

# Trust-Tasks framework — wire-envelope for the trust-task migration
# initiative (docs/05-design-notes/trust-task-uri-registry.md). On
# crates.io; the `[patch.crates-io]` git pin that lived here through
# the pre-publish window is gone. 0.2 adds `v0_2` spec modules
# (camelCase wire enums + `/0.2` TYPE_URIs) alongside the retained
# `v0_1` modules — the VTA dual-accepts both during the migration.
# Bump in lockstep with affinidi-webvh-service when upstream publishes.
trust-tasks-rs = { version = "0.2.16", default-features = false, features = ["validate"] }
trust-tasks-capability-client = "0.1"
trust-tasks-https = { version = "0.2", default-features = false, features = ["server", "client", "jwt"] }
trust-tasks-proof = { version = "0.2", default-features = false, features = ["affinidi"] }

# Axum extras (typed headers for Bearer auth)
axum-extra = { version = "0.12", features = ["typed-header"] }

# Base64 encoding
base64 = "0.22"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# tonic 0.12.x forces `ring` on tokio-rustls; explicit dep lets main() install aws-lc-rs as the default provider.
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std", "tls12"] }

# Interactive prompts
dialoguer = "0.12"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal UI
ratatui = "0.30"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hoisted to keep version pins consistent across the 3+ crates that use them.

# Web framework — pinned at workspace level so vta-service and vtc-service
# (and vti-common's axum extractors) never drift onto different majors.
axum = "0.8"
tower-http = "0.6"
tokio-util = "0.7"

# OpenAPI 3.1 generation. `utoipa` derives schemas (ToSchema) + per-handler
# path metadata; `utoipa-axum` (`OpenApiRouter`) makes the router the single
# source of truth so the served `/openapi.json` can't drift from the routes.
# The SDK gates its `ToSchema` derives behind its own `openapi` feature so the
# published artifact stays slim; the services depend on utoipa unconditionally.
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"

# Used by every CLI (operator config) and both services (config-from-toml).
toml = "1"
dirs = "6"

# Hex encode/decode — sealed-transfer producer keys, key fingerprints, etc.
hex = "0.4"

# Symmetric crypto helpers used by sealed-transfer + storage encryption.
aes-gcm = "0.10"
hkdf = "0.13"

# HMAC-SHA256 for vti-common's audit-log actor/target identifier
# hashing. The key is per-community and rotated on RTBF, so a plain
# SHA-256 over a DID would be reversible by enumeration — see spec
# §11.1.
hmac = "0.13"

# Vsock-store deps shared by vti-common's vsock keyspace and the enclave
# bootstrap; libc is also used by vta-service's vsock-bridge helpers.
tokio-vsock = "0.7"
libc = "0.2"

# Azure secret-store deps shared across SDK + both services.
azure_security_keyvault_secrets = "0.14"
azure_identity = "0.35"

# Kubernetes secret-store backend (feature `k8s-secrets`, off by default) for
# both services. The seed/key material is stored as a hex string inside a
# namespaced `Secret` resource. `Client::try_default()` auto-detects the
# in-cluster ServiceAccount or a local kubeconfig, so no auth knobs are needed.
# `default-features = false` + `rustls-tls` keeps OpenSSL out of the tree (the
# rest of the workspace is rustls). `k8s-openapi`'s `latest` feature floats the
# generated API version — fine here, the core/v1 `Secret` shape is long-stable.
kube = { version = "3.1", default-features = false, features = [
  "client",
  "rustls-tls",
] }
k8s-openapi = { version = "0.27", features = ["latest"] }

# Hoist DID-resolver-cache feature drift: every crate uses 0.8 but a few
# omit the `network` feature. The default here turns it on; dependents
# that want the offline-only cache can opt out via `default-features = false`.
affinidi-did-resolver-cache-sdk = { version = "0.8", features = ["network"] }

# WebAuthn / passkey infrastructure. Used by vti-common's `passkey` feature
# for shared enrolment + login ceremonies — both VTA (admin auth, later) and
# VTC (install + admin login) consume it. The version pin matches what
# `affinidi-webvh-service` ships against, since we adopt that crate's
# passkey module pattern.
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
] }

# Rego (OPA policy language) interpreter. In-process — no OPA sidecar.
# Used by `vtc-service`'s policy engine (Phase 2 M2.1). Defaults include
# `arc` so `regorus::Engine` is `Send + Sync` and `full-opa` for the
# stdlib builtins (regex, time, etc.) that real policies (`join.rego`,
# `removal.rego`) lean on. Trim later if compile times bite.
regorus = "0.10"

# OS keyring API (replaces legacy `keyring` v3 crate). keyring-core 1.0 split
# the API from the backend stores; each binary picks a platform-native store
# and registers it once at startup via `vta_sdk::keyring_init::install_default_store`.
keyring-core = "1"
apple-native-keyring-store = { version = "1", default-features = false, features = ["keychain"] }
windows-native-keyring-store = "1"
dbus-secret-service-keyring-store = { version = "1", default-features = false, features = ["crypto-rust"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Workspace-wide lint policy. Each crate inherits via `lints.workspace = true`
# in its own Cargo.toml. Per-crate `#[allow(...)]` overrides are still possible
# but visible in review.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# Style/escape-hatch fences. Crates that want the broader clippy::all
# default still get it via the `cargo clippy -- -D warnings` CI gate.
needless_pass_by_value = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
