[package]
name = "cnm-cli"
description = "CLI Tool for Verified Trust Agents operating in Verified Trust Communities"
version = "0.7.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "cnm"
path = "src/main.rs"

[features]
default = ["keyring"]
keyring = ["vta-sdk/keyring"]
config-session = ["vta-sdk/config-session"]
azure-secrets = ["vta-sdk/azure-secrets"]

[dependencies]
vta-sdk = { path = "../vta-sdk", version = "0.8", features = ["session"] }
vta-cli-common = { path = "../vta-cli-common", version = "0.7" }
affinidi-did-resolver-cache-sdk = { workspace = true }
clap = { workspace = true, features = ["env"] }
dialoguer = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
