[package]
name = "didcomm-test"
description = "Standalone DIDComm connectivity test — mimics VTA TEE key + messaging flow"
readme = "README.md"
version = "0.6.0"
edition.workspace = true
publish = false
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "didcomm-test"
path = "src/main.rs"

[dependencies]
vta-sdk = { path = "../vta-sdk", version = "0.7", features = ["didcomm"] }
affinidi-tdk = { workspace = true }
affinidi-did-resolver-cache-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
ed25519-dalek-bip32 = { workspace = true }
multibase = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
