[package]
name = "pnm-cli"
description = "CLI Tool for managing a personal Verifiable Trust Agent"
version = "0.5.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "pnm"
path = "src/main.rs"

[features]
default = ["keyring"]
keyring = ["vta-sdk/keyring"]
config-session = ["vta-sdk/config-session"]
azure-secrets = ["vta-sdk/azure-secrets"]

[dependencies]
vta-sdk = { path = "../vta-sdk", version = "0.5", features = ["session", "sealed-transfer", "attest-verify", "provision-integration"] }
affinidi-crypto = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
vta-cli-common = { path = "../vta-cli-common", version = "0.5" }
affinidi-did-resolver-cache-sdk = "0.8"
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
dialoguer = { workspace = true }
dirs = "6"
ed25519-dalek = { workspace = true }
multibase = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
