[package]
name = "vta-cli-common"
description = "Shared CLI command handlers and rendering helpers for VTA CLIs"
readme = "README.md"
version = "0.10.8"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vta-sdk = { path = "../vta-sdk", version = "0.19", features = [
  "client",
  "sealed-transfer",
  "provision-integration",
] }
# Owner-only file-permission helper (`secure_file`), shared workspace-wide.
vti-common = { path = "../vti-common", version = "0.11" }
affinidi-crypto = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
multibase = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
# Thin HTTP client used by the `webvh did-log` CLI command to hit the
# public `GET /did/{did}/log` endpoint. VtaClient handles authenticated
# endpoints; this one is public so a bare reqwest call is simpler than
# threading it through VtaClient.
reqwest = { workspace = true }
# Interactive prompts ($EDITOR, Confirm, Input) for the
# `webvh edit-did` command. Already present transitively via
# vta-service; declaring it here so vta-cli-common can use it directly
# without leaning on a transitive dep.
dialoguer = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
