[package]
name = "vta-enclave"
description = "VTA binary for AWS Nitro Enclaves (TEE mode)"
readme = "README.md"
version = "0.7.0"
edition.workspace = true
# `vta-enclave` is a Linux-only Nitro Enclave binary (vsock-store depends
# on `tokio-vsock`). Publishing to crates.io would surface "fails on
# macOS/Windows" issues to operators who only need the library crates;
# the binary is consumed via the deploy pipeline, not `cargo install`.
publish = false
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vta-enclave"
path = "src/main.rs"

[features]
default = ["rest", "didcomm"]
rest = ["vta-service/rest"]
didcomm = ["vta-service/didcomm"]
webvh = ["vta-service/webvh"]
vsock-store = ["vta-service/vsock-store"]
vsock-log = ["dep:tokio-vsock"]

[dependencies]
vta-service = { path = "../vta-service", version = "0.7", default-features = false, features = ["tee"] }
vti-common = { path = "../vti-common", version = "0.8", features = ["encryption"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
tokio-vsock = { workspace = true, optional = true }

[lints]
workspace = true
